tools/tests/errors/surf_lib_14.ki
# gzip.decompress of a valid header with a corrupt deflate body must throw.
var g = import("gzip")
discard g.decompress(Bytes([31, 139, 8, 0, 1, 2, 3, 4, 0, 3, 99, 99, 99, 99, 99, 99, 1, 2, 3, 4, 5, 6, 7, 8]))
